# 2DPathtracer

./: .gitignore  CMakeLists.txt  README.md  license.txt  readme.txt
2d_pathtracer/: CMakeLists.txt  main.cpp
2d_pathtracer/geometry/: 2dmath.hpp  2dtypes.cpp  2dtypes.hpp  intersections.hpp  primitive.hpp  ray.hpp
2d_pathtracer/integrators/: path_renderer.hpp  pathracer.cpp  pathtracer.hpp  raysampler.h  result_renderer.hpp
2d_pathtracer/materials/: area_light_material.hpp  dielectric.hpp  diffuse.hpp  material.hpp  mirror.hpp
2d_pathtracer/scene/: camera.cpp  camera.hpp  light.hpp  scene.cpp  scene.hpp  scene_loader.hpp  scene_renderer.cpp  scene_renderer.hpp
2d_pathtracer/shader/: compose_fragment.glsl  compose_vert.glsl  line_fragment.glsl  line_vertex.glsl  path_fragment.glsl  path_vertex.glsl
2d_pathtracer/test_scenes/: area_light.json  color_bleeding.json  refraction.json
2d_pathtracer/testing/: dielectric_test.hpp  diffuse_test.hpp  intersection_test.hpp  mirror_test.hpp
2d_pathtracer/ui/: move_objects.cpp  move_objects.hpp
2d_pathtracer/utils/: rng.hpp
shared/dependencies/: CMakeLists.txt
shared/dependencies/glad/include/KHR/: khrplatform.h
shared/dependencies/glad/include/glad/: glad.h
shared/dependencies/glad/src/: glad.cpp
shared/dependencies/gli/: readme.txt
shared/dependencies/gli/include/gli/: gl.hpp
shared/dependencies/gli/include/gli/core/: gl.inl
shared/dependencies/glm/glm/: CMakeLists.txt
shared/dependencies/mesa/msvc/lib64/: opengl32.lib
shared/framework/: Buffer.h  CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  Pipeline.h  Program.h  Sampler.cpp  Sampler.h  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  constants.h  dassert.h  format.cpp  format.h  framework.h
